fixed layout issue on home page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -161,12 +161,13 @@ p {
   font-family: 'Ubuntu', sans-serif;
 }
 .container {
-  max-width: 80%;
+  max-width: 1000px;
+  width: 80%;
   width: 100%;
   margin: 0 auto;
-  min-height: 100%;
+  height: 100%;
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .container {
     max-width: 90%;
   }
@@ -198,6 +199,10 @@ body {
   font-family: 'Bebas Neue', cursive;
   color: #605B5B;
   letter-spacing: 2px;
+  transition-duration: 100ms;
+}
+.navbar nav a:hover {
+  transform: scale(1.2, 1.2);
 }
 .navbar nav a:hover {
   -webkit-text-stroke: 1px #605B5B;
@@ -263,7 +268,7 @@ header p {
   object-fit: contain;
 }
 .middleContent .imgs #dishes {
-  padding-top: 5%;
+  margin-top: 15%;
 }
 @media (max-width: 1000px) {
   .middleContent .imgs #dishes {
@@ -330,10 +335,14 @@ header p {
   letter-spacing: 2px;
   text-align: center;
   width: 13%;
+  transition-duration: 100ms;
 }
 .lowerContent a .btn:hover {
   background: #EC0000;
   color: black;
+}
+.lowerContent a .btn:hover {
+  transform: scale(1.1, 1.1);
 }
 @media (max-width: 800px) {
   .lowerContent a .btn {
@@ -393,7 +402,7 @@ footer {
   background: #BEB8B8;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  margin-top: 30%;
+  margin-top: 10%;
   padding: 2%;
 }
 footer p {
@@ -452,9 +461,16 @@ form ul li a:hover {
 }
 form ul .btn {
   width: 50%;
+  transition-duration: 100ms;
+}
+form ul .btn:hover {
+  transform: scale(1.1, 1.1);
 }
 @media (max-width: 500px) {
   form {
     width: 100%;
   }
+}
+#contactFooter {
+  margin-top: 65%;
 }
