--- a/LESS/contact.less
+++ b/LESS/contact.less
@@ -37,6 +37,7 @@ form {
         }
         .btn {
             width: 50%;
+            .grow(1.1, 1.1);
         }
         
     }
@@ -45,3 +46,6 @@ form {
     }
 }
 
+#contactFooter {
+    margin-top: 65%;
+}
