--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -2,7 +2,7 @@ footer {
     background: @footer-color;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    margin-top: 30%;
+    margin-top: 10%;
     padding: 2%;
 
     p {
