--- a/LESS/global.less
+++ b/LESS/global.less
@@ -37,12 +37,13 @@
   }
   
   .container {
-    max-width: 80%;
+    max-width: 1000px;
+    width: 80%;
     width: 100%;
     margin: 0 auto;
-    min-height: 100%;  
+    height: 100%;  
 
-    @media @tablet {
+    @media @desktop {
       max-width: 90%;
     }
   }
