--- a/LESS/home.less
+++ b/LESS/home.less
@@ -30,7 +30,7 @@
         }
 
         #dishes {
-            padding-top: 5%;
+            margin-top: 15%;
 
             @media @desktop {
                 display: none;
@@ -92,6 +92,7 @@
         .btn {
             .button();
             width: 13%;
+            .grow(1.1, 1.1);
 
             @media @tablet {
                 width: 20%;
